# haskell-DDD

./: ARCHITECTURE.md  CHANGELOG.md  DDD.cabal  FEATURE_BASED_ARCHITECTURE.md  REFACTORING_SUMMARY.md  Readme.md  cabal.project
app/: AppM.hs  AsciiImageService.hs  PokemonService.hs
app/Infra/: AsciiImageFetcher.hs  PokemonApiFetcher.hs
application/: CHANGELOG.md  LICENSE  application.cabal
application/src/: AppM.hs  AsciiImageService.hs  PokemonService.hs  TestM.hs
application/src/Application/: AppM.hs  Ascii.hs  Pokemon.hs  TestM.hs
application/src/Application/Ascii/: Ascii.hs  Capability.hs  Infra.hs  Service.hs
application/src/Application/Pokemon/: Capability.hs  Infra.hs  Pokemon.hs  Service.hs
application/src/Infra/: AsciiImageFetcher.hs  PokemonApiFetcher.hs
application/test/: ServiceSpec.hs
domain/: CHANGELOG.md  LICENSE  domain.cabal
domain/src/Domain/: Ascii.hs  Error.hs  Pokemon.hs  Url.hs
exe/: Main.hs
exe-package/: CHANGELOG.md  exe-package.cabal
exe-package/src/: Main.hs
test/: ServiceSpec.hs
