cabal-version:      3.0
name:               application
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Titouan CREACH
maintainer:         titouan.creach@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        Infra.PokemonApiFetcher
        , AsciiImageService
        , AppM
        , PokemonService
        , Infra.AsciiImageFetcher

    build-depends:    
        base ^>=4.18.3.0
        , hspec
        , aeson
        , bytestring
        , req
        , domain
        , text
        , mtl

    hs-source-dirs:   src
    default-language: Haskell2010

test-suite application-test
    type:             exitcode-stdio-1.0
    main-is:          ServiceSpec.hs

    build-depends:
        base,
        hspec,
        aeson,
        text,
        domain,
        application,
        req,
        mtl

    hs-source-dirs:   test
    default-language: Haskell2010

