cabal-version:      3.0
name:               exe-package
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Titouan CREACH
maintainer:         titouan.creach@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable DDD
    import:           warnings
    main-is:          Main.hs

    build-depends:    
        base ^>=4.18.3.0
        , application
        , mtl
        , domain
        , req
        , text
        , bytestring
        , co-log

    hs-source-dirs:   src
    default-language: Haskell2010

